[package]
name = "cf_ws"
version = "0.1.0"
edition = "2021"
authors = [ "JoeruCodes <joymedi8143@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0", features = ["d1"]}
worker-macros = { version="0.5.0" }
console_error_panic_hook = { version = "0.1.1" }
futures-util = "0.3.31"
futures = "0.3.31"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
getrandom = {version = "0.2.11", features = ["js"]}
rand = "0.8.5"