[package]
name = "cf_ws"
version = "0.1.0"
edition = "2021"
authors = [ "JoeruCodes <joymedi8143@gmail.com>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0", features = ["d1"]}
worker-macros = { version="0.5.0" }
console_error_panic_hook = { version = "0.1.1" }
futures-util = "0.3.31"
futures = "0.3.31"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
rand = "0.8.5"
chrono = { version = "0.4", features = ["clock"] }
uuid = { version = "1.8", features = ["v4", "js"] }
once_cell = "1.18"
sha2 = "0.10.9"
hex = "0.4.3"
reqwest = { version = "0.12.16", features = ["multipart", "json"], default-features = false }
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["Blob", "BlobPropertyBag", "File", "FormData"] }
alloy = {version="1.0.12" , features=["network", "providers", "signer-local", "sol-types", "contract", "rpc-types"], default-features=false}
getrandom = { version = "0.2", features = ["js"] }